syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hansan.mariaes.lib.proto.user";
option java_outer_classname = "UserServiceProto";

package user_service;

service UserInfo {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

service UserAuthentication {
    rpc CheckPassword(CheckPasswordRequest) returns (CheckPasswordResponse) {}
}

service UserRegistration {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}

message RegisterUserRequest {
    string name = 1;
    string password = 2;
}
message RegisterUserResponse {
    int64 userId = 1;
}

message CheckPasswordRequest {
    string name = 1;
    string password = 2;
}

message CheckPasswordResponse {
    int64 userId = 1;
    bool isCorrect = 2;
}

message GetUserRequest {
    int64 userId = 1;
}

message GetUserResponse {
    int64 userId = 1;
    string name = 2;
    string password = 3;
}